# de_sb_01

./: .gitignore  docker-compose-airflow-only.yml  docker-compose-all-but-airflow.yml  docker-compose.yml
dev/: pyproject.toml
dev/src/03_reading_and_writing_files/: 01_simple_writer.py  02_faker_based_writer.py  03_simple_reader.py  04_pandas_reader.py  05_pandas_writer.py  06_json_faker_based_writer.py  06a_json_faker_based_writer.py  07_json_reader.py  08_pandas_json_reader.py  myCSV.CSV  myCSV3.csv  myJSON.json  myJSON2.json  test.py
dev/src/04_working_wtih_databases/: 01_working_with_postgresql.py  02a_elastic_search_adding_and_deleting.py  02b_elastic_search_querying.py  fromdb.csv  myJSON1.json
volumes/: create_folders.bat  create_folders.ps1  create_folders.sh
volumes/airflow/dags/: .airflowignore
volumes/airflow/dags/eak74/custom_dags/: 02_read_file.py  03_read_from_pg_thru_csv_to_es.py  04_read_from_pg_thru_configured_conn.py  05_execute_my_custom_operator.py  welcome_dag.py
volumes/airflow/dags/eak74/scripts/task_04/: script_01.py
volumes/airflow/files/: 04_test_DAG.py  myCSV2.csv  myJSON1.json  myJSON2.json  test.py  tmp_from_db.csv
volumes/airflow/plugins/custom_operators/: __init__.py  my_custom_operator.py
volumes/nifi/templates/: GetAndSplitCSVByNameIntoMultipleFiles.xml
