[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = ["Evgeny Kosterin <sparepart74@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^33.3.0"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
